--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,58 @@
 <resources>
-    <string name="app_name">Reus</string>
+    <string name="app_name">Reus!!!</string>
+
+    <string name="welcome">Welcome</string>
+    <string name="user">User</string>
+    <string name="password">Password</string>
+    <string name="login">Log In</string>
+    <string name="logup">Log Up</string>
+
+    <string name="lema">Your meeting point!</string>
+
+    <string name="reu">My Reus</string>
+    <string name="people">My People</string>
+    <string name="gallery">Gallery</string>
+    <string name="notifications">Notifications</string>
+    <string name="options">Options</string>
+    <string name="log_out">Log out</string>
+
+    <!-- Reu -->
+    <string name="new_reu">New Reu</string>
+    <string name="search_reu">Search Reu</string>
+    <string name="record_reu">Record Reu</string>
+
+    <!-- Registar Reu -->
+    <string name="reu_name">Reu Name</string>
+    <string name="code_name">Code Name</string>
+    <string name="reu_type">Reu Type</string>
+    <string name="place">Place</string>
+    <string name="go_map">Go to the Map</string>
+    <string name="number_people">Numbres People</string>
+    <string name="invite_people">Invite People</string>
+
+
+    <!-- Registar Actor -->
+    <string name="number">Number</string>
+    <string name="name">Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="gender">Genero</string>
+    <string name="male">Masculino</string>
+    <string name="female">Femenino</string>
+    <string name="telephone">Telephone</string>
+    <string name="email">Email</string>
+
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="title_activity_principal">Reu!!!</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
