--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,9 @@
     <string name="telephone">Telephone</string>
     <string name="email">Email</string>
 
+    <!-- Buscar Reu -->
+    <string name="date">Fecha</string>
+
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
 
@@ -54,5 +57,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
