--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,17 @@
 <resources>
     <string name="app_name">Reus!!!</string>
 
+    <string name="lema">Your meeting point!</string>
+
+    <!-- Logueo -->
     <string name="welcome">Welcome</string>
     <string name="user">User</string>
     <string name="password">Password</string>
     <string name="login">Log In</string>
     <string name="logup">Log Up</string>
 
-    <string name="lema">Your meeting point!</string>
-
+    <!-- Menu -->
+    <string name="data">My Data</string>
     <string name="reu">My Reus</string>
     <string name="people">My People</string>
     <string name="gallery">Gallery</string>
@@ -16,7 +19,7 @@
     <string name="options">Options</string>
     <string name="log_out">Log out</string>
 
-    <!-- Reu -->
+    <!-- Mis Reus -->
     <string name="new_reu">New Reu</string>
     <string name="search_reu">Search Reu</string>
     <string name="record_reu">Record Reu</string>
@@ -27,23 +30,23 @@
     <string name="reu_type">Reu Type</string>
     <string name="place">Place</string>
     <string name="go_map">Go to the Map</string>
-    <string name="number_people">Numbres People</string>
-    <string name="invite_people">Invite People</string>
+    <string name="date">Date</string>
 
+    <!-- Registar Usuario -->
+    <string name="new_user">New User</string>
+    <string name="email">Email</string>
+    <string name="pass">Password</string>
 
-    <!-- Registar Actor -->
+    <!-- Actualizar Usuario -->
     <string name="number">Number</string>
     <string name="name">Name</string>
     <string name="last_name">Last Name</string>
-    <string name="gender">Genero</string>
-    <string name="male">Masculino</string>
-    <string name="female">Femenino</string>
+    <string name="gender">Gender</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
     <string name="telephone">Telephone</string>
-    <string name="email">Email</string>
 
-    <!-- Buscar Reu -->
-    <string name="date">Fecha</string>
-
+    <!-- Botones -->
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
 
@@ -54,9 +57,5 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
 
 </resources>
