--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_notificacion">NotificacionActivity</string>
+    <string name="title_activity_galeria_fotos">GaleriaFotosActivity</string>
 
 </resources>
